--- a/assests/css/generator.css
+++ b/assests/css/generator.css
@@ -102,7 +102,7 @@ h6 {
 
 @media (width <=768px) {
   .container {
-    margin: 0 auto;
+    margin: 50px auto;
     width: 100%;
     padding: 24px;
   }
